--- a/src/com/spendWise/views/signup.fxml
+++ b/src/com/spendWise/views/signup.fxml
@@ -17,17 +17,17 @@
          <children>
             <Pane layoutY="3.0" prefHeight="400.0" prefWidth="600.0">
                <children>
-                  <TextField layoutX="280.0" layoutY="138.0" prefHeight="30.0" prefWidth="230.0" />
-                  <PasswordField layoutX="282.0" layoutY="181.0" prefHeight="30.0" prefWidth="230.0" />
-                  <Label layoutX="115.0" layoutY="97.0" text="Username" />
-                  <PasswordField layoutX="282.0" layoutY="223.0" prefHeight="30.0" prefWidth="230.0" />
+                  <Label layoutX="115.0" layoutY="94.0" text="Username" />
+                  <TextField fx:id="usernameField" layoutX="280.0" layoutY="94.0" prefHeight="30.0" prefWidth="230.0" />
+                  <Label layoutX="115.0" layoutY="141.0" text="Display name" />
+                  <TextField fx:id="displayNameField" layoutX="280.0" layoutY="141.0" prefHeight="30.0" prefWidth="230.0" />
                   <Label layoutX="115.0" layoutY="186.0" text="Enter password" />
-                  <TextField layoutX="278.0" layoutY="94.0" prefHeight="30.0" prefWidth="230.0" />
-                  <Label layoutX="116.0" layoutY="141.0" text="Display name" />
-                  <Label layoutX="114.0" layoutY="228.0" text="Re-enter password" />
-                  <CheckBox layoutX="189.0" layoutY="273.0" mnemonicParsing="false" text="I agree to terms and conditions" />
-                  <Button layoutX="190.0" layoutY="310.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="218.0" text="Sign up" />
-                  <Hyperlink layoutX="335.0" layoutY="352.0" text="Sign in here" />
+                  <PasswordField fx:id="passwordField" layoutX="280.0" layoutY="186.0" prefHeight="30.0" prefWidth="230.0" />
+                  <Label layoutX="115.0" layoutY="228.0" text="Re-enter password" />
+                  <PasswordField fx:id="confirmPasswordField" layoutX="282.0" layoutY="223.0" prefHeight="30.0" prefWidth="230.0" />
+                  <CheckBox fx:id="tandcCheckBox" layoutX="189.0" layoutY="273.0" mnemonicParsing="false" text="I agree to terms and conditions" />
+                  <Button fx:id="signupButton" layoutX="190.0" layoutY="310.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="218.0" text="Sign up" />
+                  <Hyperlink fx:id="loginLink" layoutX="335.0" layoutY="352.0" text="Sign in here" />
                   <Text layoutX="170.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already have an account ?" />
                </children>
             </Pane>
