--- a/src/com/spendWise/views/home.fxml
+++ b/src/com/spendWise/views/home.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.29797979797979796" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" pickOnBounds="false" prefHeight="400.0" prefWidth="800.0" scaleShape="false" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.29797979797979796" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" pickOnBounds="false" prefHeight="400.0" prefWidth="800.0" scaleShape="false" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.HomeController">
   <items>
       <Pane prefHeight="400.0" prefWidth="800.0">
          <children>
@@ -40,8 +40,8 @@
                   </TextField>
                   <Accordion>
                     <panes>
-                      <TitledPane animated="false" collapsible="false" expanded="false" text="Dashboard" />
-                      <TitledPane animated="false" text="Accounts">
+                      <TitledPane fx:id="dashboardPane" animated="false" collapsible="false" expanded="false" text="Dashboard" />
+                      <TitledPane fx:id="accountsPane" animated="false" text="Accounts">
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
@@ -54,8 +54,8 @@
                               </AnchorPane>
                         </content>
                       </TitledPane>
-                      <TitledPane animated="false" collapsible="false" expanded="false" text="Settings" />
-                        <TitledPane animated="false" collapsible="false" expanded="false" text="Help" />
+                      <TitledPane fx:id="settingsPane" animated="false" collapsible="false" expanded="false" text="Settings" />
+                        <TitledPane fx:id="helpPane" animated="false" collapsible="false" expanded="false" text="Help" />
                     </panes>
                   </Accordion>
                   <BorderPane maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="225.0" prefWidth="200.0">
