--- a/bin/com/spendWise/views/signin.fxml
+++ b/bin/com/spendWise/views/signin.fxml
@@ -20,7 +20,7 @@
                   <TextField fx:id="usernameField" layoutX="280.0" layoutY="120.0" prefHeight="30.0" prefWidth="230.0" />
                   <Label layoutX="115.0" layoutY="186.0" text="Enter password" />
                   <PasswordField fx:id="passwordField" layoutX="280.0" layoutY="186.0" prefHeight="30.0" prefWidth="230.0" />
-                  <Button fx:id="signinButton" layoutX="190.0" layoutY="270.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="218.0" text="Sign in" />
+                  <Button fx:id="signinButton" layoutX="190.0" layoutY="270.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="218.0" style="-fx-background-color: #ff9900;" text="Sign in" />
                   <Hyperlink fx:id="signUpLink" layoutX="325.0" layoutY="320.0" text="Sign up here" />
                   <Text layoutX="170.0" layoutY="339.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account ?" />
                </children>
