--- a/bin/com/spendWise/views/signup.fxml
+++ b/bin/com/spendWise/views/signup.fxml
@@ -26,7 +26,7 @@
                   <Label layoutX="115.0" layoutY="228.0" text="Re-enter password" />
                   <PasswordField fx:id="confirmPasswordField" layoutX="282.0" layoutY="223.0" prefHeight="30.0" prefWidth="230.0" />
                   <CheckBox fx:id="tandcCheckBox" layoutX="189.0" layoutY="273.0" mnemonicParsing="false" text="I agree to terms and conditions" />
-                  <Button fx:id="signupButton" layoutX="190.0" layoutY="310.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="218.0" text="Sign up" />
+                  <Button fx:id="signupButton" layoutX="190.0" layoutY="310.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="218.0" style="-fx-background-color: #ff9900;" text="Sign up" />
                   <Hyperlink fx:id="loginLink" layoutX="335.0" layoutY="352.0" text="Sign in here" />
                   <Text layoutX="170.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already have an account ?" />
                </children>
