--- a/bin/com/spendWise/views/SettingsContent.fxml
+++ b/bin/com/spendWise/views/SettingsContent.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TabPane layoutX="10.0" layoutY="7.0" prefHeight="203.0" prefWidth="581.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="10.0" layoutY="7.0" prefHeight="203.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Change password">
+          <Tab text="Change password" style="-fx-background-color: #55DA68;">
                <content>
                   <Pane prefHeight="166.0" prefWidth="581.0">
                      <children>
@@ -28,18 +28,18 @@
                               <Font size="15.0" />
                            </font>
                         </Text>
-                        <TextField id="newPasswdField" layoutX="272.0" layoutY="38.0" prefHeight="30.0" prefWidth="220.0" />
-                        <TextField id="reEnterPasswdField" layoutX="274.0" layoutY="80.0" prefHeight="30.0" prefWidth="220.0" />
-                        <Button id="confirmButton" layoutX="185.0" layoutY="128.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" text="Confirm" />
+                        <TextField id="newPasswdField" layoutX="272.0" layoutY="38.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2;"/>
+                        <TextField id="reEnterPasswdField" layoutX="274.0" layoutY="80.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2"/>
+                        <Button id="confirmButton" layoutX="185.0" layoutY="128.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
                      </children>
                   </Pane>
                </content>
             </Tab>
         </tabs>
       </TabPane>
-      <TabPane layoutX="10.0" layoutY="225.0" prefHeight="162.0" prefWidth="581.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="10.0" layoutY="225.0" prefHeight="162.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Change Display name">
+          <Tab text="Change Display name" style="-fx-background-color: #55DA68;">
                <content>
                   <Pane prefHeight="200.0" prefWidth="200.0">
                      <children>
@@ -48,8 +48,8 @@
                               <Font size="15.0" />
                            </font>
                         </Text>
-                        <TextField id="newDisplayNameField" layoutX="268.0" layoutY="34.0" prefHeight="30.0" prefWidth="220.0" />
-                        <Button id="confirmButton" layoutX="184.0" layoutY="82.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" text="Confirm" />
+                        <TextField id="newDisplayNameField" layoutX="268.0" layoutY="34.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2"/>
+                        <Button id="confirmButton" layoutX="184.0" layoutY="82.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
                      </children>
                   </Pane>
                </content>
