--- a/bin/com/spendWise/views/DashboardContent.fxml
+++ b/bin/com/spendWise/views/DashboardContent.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane id="DashbordPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="DashbordPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.DashboardContentController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="239.0" layoutY="14.0" stroke="WHITE" strokeType="INSIDE" width="121.0" />
       <TabPane id="TabPaneAccountDetails" layoutX="16.0" layoutY="48.0" prefHeight="151.0" prefWidth="567.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
