--- a/bin/com/spendWise/views/SettingsContent.fxml
+++ b/bin/com/spendWise/views/SettingsContent.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.SettingsController">
    <children>
       <TabPane layoutX="10.0" layoutY="6.0" prefHeight="152.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -17,9 +18,7 @@
                <content>
                   <Pane prefHeight="107.0" prefWidth="581.0">
                      <children>
-                        <TextField id="reEnterPasswdField" layoutX="295.0" layoutY="36.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
-                        <Button id="confirmButton" layoutX="193.0" layoutY="79.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
-                        <TextField id="reEnterPasswdField" layoutX="42.0" layoutY="37.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
+                        <Button fx:id="confirmButton" layoutX="193.0" layoutY="79.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
                         <Label layoutX="42.0" layoutY="11.0" text="New password">
                            <font>
                               <Font size="15.0" />
@@ -30,6 +29,8 @@
                               <Font size="15.0" />
                            </font>
                         </Label>
+                        <PasswordField fx:id="newPasswordField" layoutX="42.0" layoutY="35.0" prefHeight="30.0" prefWidth="196.0" style="-fx-background-color: #e2aef2;" />
+                        <PasswordField fx:id="confirmPasswordField" layoutX="295.0" layoutY="35.0" prefHeight="30.0" prefWidth="196.0" style="-fx-background-color: #e2aef2;" />
                      </children>
                   </Pane>
                </content>
@@ -42,8 +43,8 @@
                <content>
                   <Pane prefHeight="63.0" prefWidth="581.0">
                      <children>
-                        <TextField id="newDisplayNameField" layoutX="187.0" layoutY="17.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
-                        <Button id="confirmButton" layoutX="422.0" layoutY="15.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
+                        <TextField fx:id="newDisplayNameField" layoutX="187.0" layoutY="17.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
+                        <Button fx:id="changeNameButton" layoutX="422.0" layoutY="15.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
                         <Label layoutX="47.0" layoutY="20.0" text="New display name">
                            <font>
                               <Font size="15.0" />
@@ -66,8 +67,8 @@
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <TextField id="reEnterPasswdField" layoutX="189.0" layoutY="24.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
-                        <Button id="confirmButton" layoutX="424.0" layoutY="25.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Delete Account" />
+                        <Button fx:id="deleteButton" layoutX="424.0" layoutY="25.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Delete Account" />
+                        <PasswordField fx:id="CurrentPassword" layoutX="187.0" layoutY="23.0" prefHeight="30.0" prefWidth="221.0" style="-fx-background-color: #e2aef2;" />
                      </children>
                   </Pane>
                </content>
