CSS parts were added to several fxml files

--- a/bin/com/spendWise/views/EditTransaction.fxml
+++ b/bin/com/spendWise/views/EditTransaction.fxml
@@ -35,7 +35,7 @@
             <Font size="10.0" />
          </font>
       </Text>
-      <Button fx:id="ButtonEditTransaction" layoutX="130.0" layoutY="320.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;" text="Edit Transaction" />
-      <Button fx:id="ButtonDeleteTransaction" layoutX="320.0" layoutY="320.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;" text="Delete Transaction" />
+      <Button fx:id="ButtonEditTransaction" layoutX="130.0" layoutY="320.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Edit Transaction" />
+      <Button fx:id="ButtonDeleteTransaction" layoutX="320.0" layoutY="320.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Delete Transaction" />
    </children>
 </AnchorPane>
