--- a/bin/com/spendWise/views/CorrectTransactionError.fxml
+++ b/bin/com/spendWise/views/CorrectTransactionError.fxml
@@ -29,6 +29,6 @@
             <Font size="10.0" />
          </font>
       </Text>
-      <Button fx:id="ButtonSearchTransaction" layoutX="214.0" layoutY="266.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;" text="Search Transaction" />
+      <Button fx:id="ButtonSearchTransaction" layoutX="214.0" layoutY="266.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Search Transaction" />
    </children>
 </AnchorPane>
