--- a/bin/com/spendWise/views/DashboardContent.fxml
+++ b/bin/com/spendWise/views/DashboardContent.fxml
@@ -20,13 +20,13 @@
                      <children>
                         <Label fx:id="LableCashBalance" layoutX="21.0" layoutY="17.0" text="Cash Balance :" />
                         <Label fx:id="LableBankBalance" layoutX="305.0" layoutY="17.0" text="Bank Balance :" />
-                        <Label fx:id="LableTotalBalance" layoutX="172.0" layoutY="46.0" text="Total Blance :" />
+                        <Label fx:id="LableTotalBalance" layoutX="172.0" layoutY="46.0" text="Total Balance :" />
                         <Rectangle fx:id="RectangleCashBalance" arcHeight="5.0" arcWidth="5.0" fill="#e2aef2" height="20.0" layoutX="104.0" layoutY="16.0" stroke="#e2aef2" strokeType="INSIDE" width="160.0" />
                         <Rectangle fx:id="RectangleBankBalance" arcHeight="5.0" arcWidth="5.0" fill="#e2aef2" height="20.0" layoutX="393.0" layoutY="16.0" stroke="#e2aef2" strokeType="INSIDE" width="160.0" />
                         <Rectangle fx:id="RectangleTotalBalance" arcHeight="5.0" arcWidth="5.0" fill="#e2aef2" height="20.0" layoutX="252.0" layoutY="45.0" stroke="#e2aef2" strokeType="INSIDE" width="160.0" />
-                        <Button fx:id="ButtonEditTransaction" layoutX="225.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;" text="Edit a Transaction" />
-                        <Button fx:id="ButtonCorrectError" layoutX="375.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;" text="Correct an Error" />
-                        <Button fx:id="ButtonAddTransaction" layoutX="75.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;" text="Add a Transaction" />
+                        <Button fx:id="ButtonEditTransaction" layoutX="225.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Edit a Transaction" />
+                        <Button fx:id="ButtonCorrectError" layoutX="375.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Correct an Error" />
+                        <Button fx:id="ButtonAddTransaction" layoutX="75.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Add a Transaction" />
                      </children>
                   </AnchorPane>
             </content>
@@ -45,21 +45,21 @@
                               <Font size="14.0" />
                            </font>
                         </Text>
-                        <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="8.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;" text="Undo" />
+                        <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="8.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Undo" />
                         <Rectangle fx:id="RctangleTransaction" arcHeight="5.0" arcWidth="5.0" fill="#ffe0b3" height="35.0" layoutX="21.0" layoutY="89.0" stroke="#ffe0b3" strokeType="INSIDE" width="526.0" />
                         <Text layoutX="30.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 3">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Text>
-                        <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="89.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;" text="Undo" />
+                        <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="89.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Undo" />
                         <Rectangle fx:id="RctangleTransaction" arcHeight="5.0" arcWidth="5.0" fill="#ffe0b3" height="35.0" layoutX="21.0" layoutY="48.0" stroke="#ffe0b3" strokeType="INSIDE" width="526.0" />
                         <Text layoutX="30.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 2">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Text>
-                        <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="48.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;" text="Undo" />
+                        <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="48.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Undo" />
                      </children>
                   </AnchorPane>
             </content>
