--- a/src/com/spendWise/views/AccountSettingsContent.fxml
+++ b/src/com/spendWise/views/AccountSettingsContent.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.AccountSettingsController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.AccountSettingsController" style="-fx-background-color: #eeccff;">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="197.5999755859375" minWidth="10.0" prefWidth="150" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="300" />
@@ -33,13 +33,13 @@
         </rowConstraints>
          <children>
             <Label text="Account Name" />
-            <TextField fx:id="mainAccountNameTextField" prefHeight="25.6" prefWidth="171.2" GridPane.columnIndex="1" />
+            <TextField fx:id="mainAccountNameTextField" prefHeight="25.6" prefWidth="171.2" GridPane.columnIndex="1" style="-fx-background-color:#e2aef2"/>
             <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
                <center>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button fx:id="addAccountButton" mnemonicParsing="false" text="Add Account" />
-                        <Button fx:id="deleteAccountButton" mnemonicParsing="false" text="Delete Account" />
+                        <Button fx:id="addAccountButton" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Add Account" />
+                        <Button fx:id="deleteAccountButton" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Delete Account" />
                      </children>
                   </HBox>
                </center></BorderPane>
@@ -57,12 +57,12 @@
         </rowConstraints>
          <children>
             <Label text="Old Account Name" />
-            <TextField fx:id="oldAccountNameTextField" prefHeight="25.6" prefWidth="171.2" GridPane.columnIndex="1" />
+            <TextField fx:id="oldAccountNameTextField" prefHeight="25.6" prefWidth="171.2" GridPane.columnIndex="1" style="-fx-background-color:#e2aef2"/>
             <Label text="New Account Name" GridPane.rowIndex="1" />
-            <TextField fx:id="newAccountNameField" prefHeight="25.6" prefWidth="171.2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="newAccountNameField" prefHeight="25.6" prefWidth="171.2" GridPane.columnIndex="1" GridPane.rowIndex="1" style="-fx-background-color:#e2aef2"/>
             <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
                <center>
-                  <Button fx:id="renameAccountButton" mnemonicParsing="false" text="Rename Account" BorderPane.alignment="CENTER" />
+                  <Button fx:id="renameAccountButton" mnemonicParsing="false" text="Rename Account" BorderPane.alignment="CENTER" style="-fx-background-color: #ff9900;-fx-text-fill: white;"/>
                </center>
             </BorderPane>
          </children>
